Merged all the sub-components back into the main project. It may be useful to carve out parts of it later, but having separate projects was more painful than its added value.